# EQueue

./: README.md
client/: CMakeLists.txt  calllist.cpp  calllist.h  calllist.ui  equeue.cpp  equeue.h  equeue.ui  jsonworker.cpp  jsonworker.h  main.cpp  networker.cpp  networker.h  settings.cpp  settings.h  settings.ui
server/: equeue_serv.py
